# SignalDrive

./: .gitignore  CONTRIBUTING.md  README.md  car_sim.py  config.py  gesture.py  gesture_car_prompt.md  graphs.py  hud.py  main.py  renderer.py  requirements.txt
.opencode/agents/: github-issues-manager.md
issues_manager/: .env.example  README.md  gh_issues.py  pyproject.toml
issues_manager/issues_manager/: __init__.py  agent.py  cli.py  utils.py
issues_manager/issues_manager/providers/: __init__.py  anthropic_provider.py  base.py  openai_compat.py
issues_manager/issues_manager/tools/: __init__.py  github.py
